[package]
name = "Aan"
version = "0.1.0"
edition = "2021"
authors = ["Tarek <tarek.aly.salem@gmail.com>"]
repository = "https://github.com/tareksalem/Aan"
license-file = "./LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "*", features = ["image", "palette", "debug", "tokio", "svg"]}
iced_native = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
reqwest = {version = "*", features = ["json", "rustls-tls"]}
dirs = "*"
lazy_static = "*"
rand = "0.8.4"
futures = {version = "*", package = "futures"}
link-preview = {version = "*", features = ["fetch"]}
once_cell = "*"
jfs = "*"
tokio = {version = "*", features=["macros"]}
open = "2.1.1"
regex = "1.5.4"
rust-embed= {version = "6.3.0", features = ["debug-embed"]}
